--- a/index.html
+++ b/index.html
@@ -42,6 +42,41 @@
     <!-- BODY -->
     <body id="body" data-spy="scroll" data-target=".header">
  
+        <form action="/" method="POST">
+        <p>
+        <label>Обратный звонок</label>
+        <p>
+        <label>Имя</label>
+        <input type="text" name="first_name">
+        </p>
+        <p>
+        <label>Телефон</label>
+        <input type="tel" name="phone">
+        </p>
+        <p>
+        <label>Страна</label>
+        <select name="country">
+        <option>США</option>
+        <option>Россия</option>
+        <option>Австралия</option>
+        <option>Белоруссия</option>
+        <option>Россия</option>
+        <option>Бразилия</option>
+        </select>
+        </p>
+        <p>
+        <label>
+        <input type="checkbox" name="terms">
+        </a>
+        </label>
+        </p>
+        <p>
+        <button>
+        Зарегистрироваться
+        </button>
+        </p>
+        </form>
+
         <!--========== HEADER ==========-->
         <header class="header navbar-fixed-top">
             <!-- Navbar -->
