--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                     <!-- End Navbar Collapse -->
                 </div>
-                 <!-- Yandex.Metrika informer -->
+                     <!-- Yandex.Metrika informer -->
     <a href="https://metrika.yandex.ru/stat/?id=91145043&amp;from=informer"
     target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/91145043/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
     style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" class="ym-advanced-informer" data-cid="91145043" data-lang="ru" /></a>
@@ -129,7 +129,9 @@
        ym(91145043, "init", {
             clickmap:true,
             trackLinks:true,
-            accurateTrackBounce:true
+            accurateTrackBounce:true,
+            webvisor:true,
+            ecommerce:"dataLayer"
        });
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/91145043" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
