--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         <!-- Favicon -->
         <link rel="shortcut icon" href="favicon.ico"/>
             
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-260884830-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-260884830-1');
+        </script>
     </head>
     <!-- END HEAD -->
 
